Fix i18n buttons partially hidden on mobile

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2553,6 +2553,7 @@ footer {
     position: absolute;
     top: 0.5em;
     right: 0.7em;
+    z-index: 10;
   }
 
   #search {
@@ -2563,6 +2564,11 @@ footer {
 
   #search input[type='text'] {
     width: 100%;
+  }
+
+  #search input[type='text'],
+  #search input[type='search'] {
+    font-size: 1.5em;
   }
 
   #lockup {
